Fixed dmg circles being wrong color in dark mode

--- a/src/Styles-CriticalHitsCircles.css
+++ b/src/Styles-CriticalHitsCircles.css
@@ -1,5 +1,5 @@
 .critical-hit-circle {
-    background: white;
+    background: #FAFAFA;
     width: 13px;
     height: 13px;
     border-radius: 50%;
