--- a/src/Styles-DamagePanel.css
+++ b/src/Styles-DamagePanel.css
@@ -3,7 +3,7 @@
     height: 18px;
     border-radius: 50%;
     border: 2px solid black;
-    background-color: white;
+    background: #FAFAFA;
     display: inline-block;
     margin-left: 3px;
     padding: 0;
